--- a/views/umbrella.pug
+++ b/views/umbrella.pug
@@ -1,3 +1,10 @@
 extends layout
 
 block content
+  div(class="container-fluid")
+  - let results=[{colour:"Rainbow",height:6,price:20.59},{colour:"Crimson Red",height:7,price:17.39},{colour:"Black",height:6,price:14.39}]
+  div(class="row")
+    each form,index in results
+        div(class = "col-sm-2" ) #{form.colour}
+        div(class = "col-sm-2" ) #{form.height}
+        div(class = "col-sm-2" ) #{form.price}
